Bug 321195 - stop cloning stylesheets from losing rule weighting and line numbers. r+sr=dbaron